Update pr0gramm dependency to 1.0.0 to support nsfp.

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,9 +1,11 @@
 package: github.com/mopsalarm/go-pr0gramm-meta-update
 import:
 - package: github.com/Sirupsen/logrus
+  version: ~0.11.0
 - package: github.com/lib/pq
 - package: github.com/mopsalarm/go-pr0gramm
-  version: master
-- package: github.com/robfig/cron
+  version: ~1.0.0
 - package: github.com/rcrowley/go-metrics
+- package: github.com/robfig/cron
+  version: ~1.0.0
 - package: github.com/vistarmedia/go-datadog
